<resources>
    <string name="app_name">Text to image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Empower_your_ideas">Empower your ideas \nand Surpass Creative \nBoundaries</string>
    <string name="Get_started">Get Started</string>
    <string name="unshakle_tour">Unshackle Tour imaginative\nSpirit</string>
    <string name="fast_process">Fast Processing</string>
    <string name="unlimitted_gems">Unlimited Gems</string>
    <string name="x_upsscaliing">4x Upscaling</string>
    <string name="ads_free">AD Free</string>
    <string name="Weekly">Weekly</string>
    <string name="rs_ruppes">Rs. 23,000</string>
    <string name="monthly">Monthly</string>
    <string name="continue_btn">Continue</string>
    <string name="text_t">Use cancel anytime for any reason</string>
    <string name="privcy_policy">Privacy Policy</string>
    <string name="Genrate">Generate</string>
    <string name="my_libarary">My Library</string>
    <string name="account">Account</string>
    <string name="enter">Enter Prompt:</string>
    <string name="describe_anything">Describe anything.Lets our robot create magic \nfor you.</string>
    <string name="num_ber">0/100</string>
    <string name="salect_style">Select style and Model</string>
    <string name="All">All</string>
    <string name="people">People</string>
    <string name="technology">Technology</string>
    <string name="anim">Anim</string>
    <string name="skip">Skip</string>
    <string name="Result">Result</string>
    <string name="re_Genrate">Re-Genrate</string>
    <string name="my_creation">My Creation</string>
    <string name="my_uploads">My Uploads</string>
    <string name="my_account">Account</string>
    <string name="Ali_farhan">Ali Farhan</string>
    <string name="dummy">Lorem ipsum dolor sit</string>
    <string name="my_profile">View My Profile</string>
    <string name="my_plan">My Plan</string>
    <string name="curent_plan">Current Plan</string>
    <string name="free">Free</string>
    <string name="plan_limmit">PLan Limmit</string>
    <string name="promt">10 Prompts/day</string>
    <string name="prompt_reaminng">Prompt Reamining</string>
    <string name="left">10 prompt left</string>
    <string name="setting">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="Log_out">Log Out</string>
    <string name="upgrade">Upgrade PLan</string>
    <string name="profile">Profile</string>
    <string name="eidt_text">Edit Name</string>
    <string name="eidt_text_user">Edit User Name</string>
    <string name="genrating_creation">Genrating your Creation</string>
    <string name="Ali_farhann">Farhan786</string>
    <string name="recent_viewd">Recently Viewd</string>
    <string name="open_gallrey">Open Gallery</string>
    <string name="feature_salect">Feature Select</string>
    <string name="image_gun">Image Gen</string>
    <string name="Add_image">Add Image</string>
    <string name="photo_boot">Photobooth</string>
    <string name="magic_edit">Magic Edit</string>
    <string name="feature_info">Feature Info:</string>
    <string name="upload_photo">Upload any photo - a sketch, landscape, logo, etc.\nWatch as the structure of your reference image appears\nin the output, bring your ideas closer to reality.</string>
    <string name="upgrade_your">Upgrade Your Access</string>
    <string name="cancel">Cancel</string>
    <string name="percentage">0%</string>
    <string name="yearly_premium">Yearly</string>
    <string name="share_us">Share App</string>
    <string name="salect_number">Salect Number of Images</string>
    <string name="image_size">Salect Image Size</string>
    <string name="_1x">1x</string>
    <string name="_2x">2x</string>
    <string name="_3x">3x</string>
    <string name="size_salected">Image size salected is(256*256)</string>
</resources>