<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/feature_salect"
        android:padding="@dimen/_16sdp"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/poppinsbold"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/image_gun"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:weightSum="3"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottom_img"
            android:gravity="center"
            android:text="@string/Add_image"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottom_imgg"
            android:gravity="center"
            android:text="@string/photo_boot"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/ic_bottom_imggg"
            android:gravity="center"
            android:text="@string/magic_edit"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/feature_info"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/poppinslight"
        android:text="@string/upload_photo"
        android:textSize="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_upgrade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
 />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upgrade"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_buttons"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/upgrade_your"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/cancel"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>