<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolorbg"
    tools:context=".presentation.UI.fragments.PremiumScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/ic_premium_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:gravity="center"
            android:text="@string/unshakle_tour"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/materialButton"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_home"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/fast_process"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:drawableStartCompat="@drawable/ic_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/materialButton2"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_home"
            android:drawableStart="@drawable/ic_check"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/unlimitted_gems"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/materialButton3"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_home"
            android:drawableStart="@drawable/ic_check"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/x_upsscaliing"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/materialButton4"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_home"
            android:drawableStart="@drawable/ic_check"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/ads_free"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/btn_getstarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/weeklyPremium"
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/weeklyCheck"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@drawable/ic_uncheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/Weekly"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weeklyCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/rs_ruppes"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/monthlyPremium"
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@+id/weeklypremium"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/monthlyCheck"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@drawable/ic_uncheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/monthly"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/monthlyCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/rs_ruppes"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/yearlyPremium"
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@+id/monthly"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/yearlyCheck"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@drawable/ic_uncheck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/yearly_premium"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/yearlyCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/rs_ruppes"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_getstarted"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/bg_buttons"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/continue_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_t"
        android:textColor="@color/lightblack"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privcy_policy"
        android:textColor="@color/lightblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>